// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.proxy";
option java_outer_classname = "FarmProto";

package proxy;

// Interface exported by the server.
service Farm {
    rpc GetFarmMessage (VMSDataRequest) returns (VMSDataResponse) {}
    rpc SendFarmMessage (VMSDataRequest) returns (VMSDataResponse) {}
}

message VMSDataRequest {}
message VMSDataResponse {
    Item vmsdata = 1;
}

message Item {
    string guid= 1;
    string owner= 2;
    int32 messagetype= 3;
    int32 sourceid= 4;
}

message VMSDatabase {
    repeated VMSDataResponse response = 1;
}


